@@ -199,9 +199,12 @@ const USB_Descriptor_Configuration_t PROGMEM ConfigurationDescriptor =
 
 			.SubFrameSize             = 0x02,
 			.BitResolution            = 16,
-			.SampleFrequencyType      = AUDIO_TOTAL_SAMPLE_RATES,
-
-			.SampleFrequencies        = {AUDIO_SAMPLE_FREQ(AUDIO_SAMPLE_FREQUENCY)}
+			.TotalDiscreteSampleRates = 1,
+		},
+	
+	.Audio_AudioFormatSampleRates =
+		{
+			AUDIO_SAMPLE_FREQ(AUDIO_SAMPLE_FREQUENCY)
 		},
 
 	.Audio_StreamEndpoint =
